Bug 154703 - REGRESSION (r196744): NetworkExtension.framework and NEFilterSource class are not available on Recovery partition
Summary: REGRESSION (r196744): NetworkExtension.framework and NEFilterSource class are...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: David Kilzer (:ddkilzer)
URL:
Keywords: InRadar
Depends on: 154364
Blocks:
  Show dependency treegraph
 
Reported: 2016-02-25 16:44 PST by David Kilzer (:ddkilzer)
Modified: 2016-02-25 18:03 PST (History)
6 users (show)

See Also:


Attachments
Patch (1.75 KB, patch)
2016-02-25 16:47 PST, David Kilzer (:ddkilzer)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description David Kilzer (:ddkilzer) 2016-02-25 16:44:46 PST
The NetworkExtension.framework and the NEFilterSource Objective-C class are not available on the Recovery partition, so we need to make their soft-linking optional to prevent a release assert crash at runtime (due to the fix for Bug 154364).

Bug 154364: [Cocoa] Always check the return value of dlopen() and dlsym() in Release builds
<https://bugs.webkit.org/show_bug.cgi?id=154364>
<http://trac.webkit.org/changeset/196744>
Comment 1 David Kilzer (:ddkilzer) 2016-02-25 16:45:51 PST
<rdar://problem/24845077>
Comment 2 David Kilzer (:ddkilzer) 2016-02-25 16:47:51 PST
Created attachment 272264 [details]
Patch
Comment 3 Andy Estes 2016-02-25 17:14:36 PST
Comment on attachment 272264 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=272264&action=review

> Source/WebCore/ChangeLog:13
> +        behavior when getNEFilterSourceClass() returned nullptr.

It returns nil, technically :)
Comment 4 WebKit Commit Bot 2016-02-25 18:03:55 PST
Comment on attachment 272264 [details]
Patch

Clearing flags on attachment: 272264

Committed r197154: <http://trac.webkit.org/changeset/197154>
Comment 5 WebKit Commit Bot 2016-02-25 18:03:59 PST
All reviewed patches have been landed.  Closing bug.