REGRESSION (r196744): NetworkExtension.framework and NEFilterSource class are not available on Recovery partition <http://webkit.org/b/154703>

Reviewed by Andy Estes.

* platform/cocoa/NetworkExtensionContentFilter.mm: Make
soft-linking of NetworkExtension.framework and NEFilterSource
class optional since they are not available on the Recovery
partition.  Note that NetworkExtensionContentFilter::enabled()
does not need to change since it already had the correct
behavior when getNEFilterSourceClass() returned nullptr.


Canonical link: https://commits.webkit.org/172801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197154 268f45cc-cd09-0410-ab3c-d52691b4dbfc